# ciot-python-demo

./: .env.template  .pre-commit-config.yaml  .secrets.baseline  .venv  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: constraints.txt  main.yaml
ciot/: pipeline.py
docs/: project_specific_setup.md  using_poetry.md
tests/: test_ciot.py
